--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mariolucasdev/evolution-sdk",
+    "name": "phpevo/phpevo",
     "type": "library",
     "description": "Uma SDK em PHP para integração simplificada com a Evolution API.",
     "funding": [
@@ -19,15 +19,13 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/container": "10.48",
-        "illuminate/support": "10.48",
-        "illuminate/http": "10.48"
+        "ext-curl": "*",
+        "guzzlehttp/guzzle": "^7.0"
     },
-    "require-dev": {},
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Evolution\\": "src/"
+            "PHPEvo\\": "src/"
         }
     },
     "authors": [
