refactor: instance uses

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,5 @@
     "cSpell.enabled": false,
     "editor.fontFamily": "JetBrains Mono",
     "material-icon-theme.activeIconPack": "react_redux",
+    "jira-plugin.workingProject": "",
 }
