--- a/composer.json
+++ b/composer.json
@@ -38,5 +38,9 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
+    },
+    "require-dev": {
+        "laravel/pint": "^1.20",
+        "phpstan/phpstan": "^2.1"
     }
 }
